retail-media/v2025.04/docs/account-creation-and-management-private-market.mdx
---
title: "Account Creation and Management (Private Market)"
---

1. Guides for Retail Media API
2. [Account](/retail-media/v2025.04/docs/account)

Account creation endpoints enable private market retailers to create both demand brand and marketplace seller accounts within the private market. The following endpoints will also provide access to manage the brand and seller mappings for each account types.

<Warning>
  ### Limited Access

  Private Market account creation and management access is currently only available for a selected group of API users. To access these endpoints, please get in touch with Criteo to have the correct permissions enabled.
</Warning>

## **Endpoints**

| Verb     | Endpoint                                                                       | Description                                                                                   |
| -------- | ------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------- |
| **GET**  | `/accounts`                                                                    | Get all Accounts                                                                              |
| **GET**  | `/account-management/accounts/{parentAccountId}/private-market-child-accounts` | Get all PM Demand Child (brand or seller) Accounts under the parent Supply Account (Retailer) |
| **POST** | `/account-management/accounts/{parentAccountId}/create-brand-account`          | Create a PM Demand-Brand Account under the Parent Supply Account                              |
| **POST** | `/account-management/accounts/{parentAccountId}/create-seller-account`         | Create a PM Demand-Seller Account under the Parent Supply Account                             |
| **POST** | `/account-management/accounts/{accountId}/brands/add`                          | Map brands to a demand brand account                                                          |
| **POST** | `/account-management/accounts/{accountId}/brands/remove`                       | Remove brand from a demand brand account                                                      |
| **PUT**  | `/account-management/accounts/{accountId}/sellers`                             | Map or remove sellers from demand seller account.                                             |

## **Account Attributes**

| Attribute                  | Data Type     | Description                                                                                                                                                                                                                                                                                                     |
| -------------------------- | ------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `id`                       | string        | Account ID, from a demand or supply account, generated internally by CriteoAccepted values: string of int64 Writeable? N / Nullable? N                                                                                                                                                                          |
| `name`                     | string        | Account name, arbitrary and defined at account creationAccepted values: up to 510-chars string Writeable? Y / Nullable? N                                                                                                                                                                                       |
| `type`                     | enum          | Account type, with `supply` being the account type for [Retailers](/retail-media/v2025.04/docs/retailers) and `demand` the account type for the different types of advertisers (brand, marketplace sellers, agencies, etc)Accepted values: `demand`, `supply` Writeable? N / Nullable? N                                                |
| `subtype`                  | enum          | Account sub-type, specific for demand accountsAccepted values: `brand`, `seller` Writeable? N / Nullable? Y                                                                                                                                                                                                     |
| `brandId`                  | list\<string> | List of [Brand](/retail-media/v2025.04/docs/brands) IDs associated with a demand brand account. Required in the demand brand account creation.Accepted values: list of string of int64 Writeable? Y / Nullable? N                                                                                                                       |
| `sellerId`                 | string        | Seller ID from Retailer's [Catalog](/retail-media/v2025.04/docs/catalogs), associated with a demand seller account. Required in the demand seller account creation.Accepted values: string of int64 Writeable? Y / Nullable? N                                                                                                          |
| `retailerId`               | string        | [Retailer](/retail-media/v2025.04/docs/retailers) ID, associated with the demand seller account, generated internally by Criteo. Required in the demand seller account creation.Accepted values: string of int64 Writeable? N / Nullable? N                                                                                             |
| `companyName`              | string        | This optional field, exclusively accessible to marketplaces within the European Union (in compliance with the Digital Service Act - DSA), will display the name of the company associated with the advertisement.Accepted values: up to 255-chars string Writeable? Y / Nullable? Y                             |
| `onBehalfCompanyName`      | string        | This optional field, exclusively accessible to marketplaces within the European Union (in compliance with the Digital Service Act - DSA), will display the name of the company (on behalf of `companyName`) associated with the advertisementAccepted values: up to 255-chars string Writeable? Y / Nullable? Y |
| `countries` / `countryIds` | list\<string> | Countries associated with the accountAccepted values: 2-chars country code (in [ISO-3166](https://www.iso.org/iso-3166-country-codes.html) alpha-2 code; e.g. `US`, `FR`) Writeable? N / Nullable? N                                                                                                            |
| `currency` / `currencyId`  | string        | Default currency for bulling, budgeting, bid settings & campaign performance metricsAccepted values: 3-chars currency code (in [ISO-4217](https://www.iso.org/iso-4217-currency-codes.html); e.g. `USD`, `EUR`) Writeable? N / Nullable? N                                                                      |
| `parentAccountLabel`       | string        | Label used to associate multiple accountsAccepted values: up to 510-chars string Default: same as `name` Writeable? Y / Nullable? N                                                                                                                                                                             |
| `timeZone`                 | string        | Account time zoneAccepted values: time zone identifiers from [IANA (TZ database)](https://www.iana.org/time-zones) (e.g. `America/New_York`, `Europe/Paris`, `Asia/Tokyo`, `UTC`) Writeable? N / Nullable? N                                                                                                    |

<Info>
  ### **Digital Service Act (DSA)**

  In compliance with the Digital Services Act (DSA), marketplaces within the European Union will receive information about the company name associated with each advertisement.
</Info>

## **Get all Accounts**

This endpoint lists all accounts accessible via your API credentials.

Results are paginated using `pageIndex` and `pageSize` query parameters; if omitted, defaults to `0` and `25`, respectively - see [API Response](#/pagination)

<Badge color="blue" size="sm" shape="pill">GET</Badge>

```text
https://api.criteo.com/{version}/retail-media/accounts?pageIndex={pageIndex}&pageSize={pageSize}
```

<Info>
  ### View in the API Reference

  You can also see this endpoint in the [API reference](https://developers.criteo.com/retail-media/reference/).
</Info>

**Sample Request**

<CodeGroup>
  ```bash cURL
  curl -L -X GET 'https://api.criteo.com/{version}/retail-media/accounts?pageIndex=0&pageSize=25' \
      -H 'Accept: application/json' \
      -H 'Authorization: Bearer <ACCESS_TOKEN>'
  ```
</CodeGroup>

**Sample Response**

<CodeGroup>
  ```json JSON
  {
      "metadata": {
          "totalItemsAcrossAllPages": 4,
          "currentPageSize": 25,
          "currentPageIndex": 0,
          "totalPages": 1
      },
      "data": [
          {
              "id": "425730879617900544",
              "type": "RetailMediaAccount",
              "attributes": {
                  "name": "Supply Private Market TEST Account",
                  "type": "supply",
                  "subtype": null,
                  "countries": [
                      "US"
                  ],
                  "currency": "USD",
                  "parentAccountLabel": "Supply Private Market TEST Account",
                  "timeZone": "America/New_York",
                  "companyName": "Supply Private Market TEST Account",
                  "onBehalfCompanyName": "Supply Private Market TEST Account"
              }
          },
          {
              "id": "568182612169883648",
              "type": "RetailMediaAccount",
              "attributes": {
                  "name": "Demand Brand Account US",
                  "type": "demand",
                  "subtype": "brand",
                  "countries": [
                      "US"
                  ],
                  "currency": "USD",
                  "parentAccountLabel": "Supply Private Market TEST Account",
                  "timeZone": "America/New_York",
                  "companyName": "Brand ABC Corp.",
                  "onBehalfCompanyName": "Brand ABC Corp."
              }
          },
          
          // ...
          
          {
              "id": "569185968379719680",
              "type": "RetailMediaAccount",
              "attributes": {
                  "name": "Town Supplies (seller)",
                  "type": "demand",
                  "subtype": "seller",
                  "countries": [
                      "US"
                  ],
                  "currency": "USD",
                  "parentAccountLabel": "Supply Private Market TEST Account",
                  "timeZone": "America/New_York",
                  "companyName": "Seller Test",
                  "onBehalfCompanyName": "Seller Test LLC"
              }
          }
      ]
  }
  ```
</CodeGroup>

## **Get Private Market Child Accounts**

This endpoint lists all Private Market child accounts (brand or marketplace seller accounts) that are associated with the given Retailer account. Response results will be provided in paginated form

Results are paginated using `offset` and `limit` query parameters; if omitted, defaults to `0` and `500`, respectively - see [API Response](https://developers.criteo.com/retail-media/docs/api-response#/pagination)

<Badge color="blue" size="sm" shape="pill">GET</Badge>

```text
https://api.criteo.com/{version}/retail-media/account-management/accounts/{parentAccountId}/private-market-child-accounts?offset={offset}&limit={limit)
```

**Sample Request**

<CodeGroup>
  ```bash cURL
  curl -L 'https://api.criteo.com/{version}/retail-media/account-management/accounts/425730879617900544/private-market-child-accounts?offset=0&limit=25' \
      -H 'Accept: application/json' \
      -H 'Authorization: Bearer <ACCESS_TOKEN>'
  ```
</CodeGroup>

**Sample Response**

<CodeGroup>
  ```json JSON
  {
      "metadata": {
          "count": 4,
          "offset": 0,
          "limit": 25
      },
      "data": [
          {
              "id": "568182612169883648",
              "type": "RetailMediaChildAccount",
              "attributes": {
                  "name": "Demand Brand Account US",
                  "type": "demand",
                  "subtype": "brand",
                  "countryIds": [
                      "US"
                  ],
                  "currencyId": "USD",
                  "timeZone": "America/New_York",
                  "companyName": "Brand ABC Corp.",
                  "onBehalfCompanyName": "Brand ABC Corp."
              }
          },
          
          // ...
          
          {
              "id": "569185968379719680",
              "type": "RetailMediaChildAccount",
              "attributes": {
                  "name": "Town Supplies (seller)",
                  "type": "demand",
                  "subtype": "seller",
                  "countryIds": [
                      "US"
                  ],
                  "currencyId": "USD",
                  "parentAccountLabel": "Supply Private Market TEST Account",
                  "timeZone": "America/New_York",
                  "companyName": "Seller Test",
                  "onBehalfCompanyName": "Seller Test LLC"
              }
          }
      ]
  }
  ```
</CodeGroup>

## **Create Brand Account**

This endpoint creates a new child Demand-Brand account under the provided parent Private Market account.

<Badge color="red" size="sm" shape="pill">POST</Badge>

```text
https://api.criteo.com/{version}/retail-media/account-management/accounts/{parentAccountId}/create-brand-account
```

**Sample Request**

<CodeGroup>
  ```bash cURL
  curl -L -X POST 'https://api.criteo.com/{version}/retail-media/account-management/accounts/425730879617900544/create-brand-account' \
      -H 'Content-Type: application/json' \
      -H 'Accept: application/json' \
      -H 'Authorization: Bearer <ACCESS TOKEN>' \
      -d '{
              "data": {
                  "type": "AccountCreationDemandBrand",
                  "attributes": {
                      "name": "Demand Brand Account US",
                      "companyName": "Brand ABC Corp.",
                      "onBehalfCompanyName": "Brand ABC Corp.",
                      "brands": [
                          "2151767311"
                      ]
                  }
              }
          }'
  ```
</CodeGroup>

**Sample Response**

<CodeGroup>
  ```json JSON
  {
      "data": {
          "attributes": {
              "name": "Demand Brand Account US",
              "companyName": "Brand ABC Corp.",
              "onBehalfCompanyName": "Brand ABC Corp.",
              "type": "Demand",
              "subType": "Brand",
              "countryIds": [
                  "US"
              ],
              "currencyId": "USD",
              "parentAccountLabel": "Supply Private Market TEST Account",
              "timeZone": "America/New_York"
          },
          "id": "569225726270857216",
          "type": "RetailMediaAccount"
      },
      "warnings": [],
      "errors": []
  }
  ```
</CodeGroup>

## **Create Seller Account**

This endpoint creates a new child Demand-Seller account under the provided parent Private Market account.

<Badge color="red" size="sm" shape="pill">POST</Badge>

```text
https://api.criteo.com/{version}/retail-media/account-management/accounts/{parentAccountId}/create-seller-account
```

**Sample Request**

<CodeGroup>
  ```bash cURL
  curl -L -X POST 'https://api.criteo.com/{version}/retail-media/account-management/accounts/425730879617900544/create-seller-account' \
      -H 'Content-Type: application/json' \
      -H 'Accept: application/json' \
      -H 'Authorization: Bearer <ACCESS TOKEN>' \
      -d '{
              "data": {
                  "type": "Demand",
                  "attributes": {
                      "name": "Town Supplies (seller)",
                      "companyName": "Seller Test",
                      "onBehalfCompanyName": "Seller Test LLC",
                      "sellers": [
                          {
                              "sellerId": "62a0871ffad67c541xxxxxxxxx",
                              "retailerId": "1141"
                          }
                      ]
                  }
              }
          }'
  ```
</CodeGroup>

**Sample Response**

<CodeGroup>
  ```json JSON
  {
      "data": {
          "attributes": {
              "name": "Town Supplies (seller)",
              "type": "Demand",
              "subType": "Seller",
              "countryIds": [
                  "US"
              ],
              "currencyId": "USD",
              "parentAccountLabel": "Supply Private Market TEST Account",
              "timeZone": "America/New_York",
              "companyName": "Seller Test",
              "onBehalfCompanyName": "Seller Test LLC"
          },
          "id": "569185968379719680",
          "type": "RetailMediaAccount"
      },
      "warnings": [],
      "errors": []
  }
  ```
</CodeGroup>

## **Add Brand to Account**

This endpoint adds a brand to a Private Market Demand-Brand account.

<Badge color="red" size="sm" shape="pill">POST</Badge>

```text
https://api.criteo.com/{version}/retail-media/account-management/accounts/{accountId}/brands/add
```

**Sample Request**

<CodeGroup>
  ```bash cURL
  curl -L -X POST 'https://api.criteo.com/{version}/retail-media/account-management/accounts/568182612169883648/brands/add' \
      -H 'Content-Type: application/json' \
      -H 'Accept: application/json' \
      -H 'Authorization: Bearer <ACCESS_TOKEN>' \
      -d '{
              "data": {
                  "type": "MapBrandstoDemandAccount",
                  "attributes": {
                      "brandIds": [
                          "2151768660"
                      ]
                  }
              }
          }'
  ```
</CodeGroup>

**Sample Response**

<CodeGroup>
  ```json JSON
  {
      "data": {
          "type": "RetailMediaBrands",
          "attributes": {
              "brandIds": [
                  2149947741,
                  2151768660
              ]
          }
      },
      "warnings": [],
      "errors": []
  }
  ```
</CodeGroup>

## **Remove Brand from Account**

This endpoint removes a brand from a Private Market Demand-Brand account.

<Warning>
  Although `brandIds` is an array format, as of now, only one brand can be removed from an account at a time, this parameter should contain only one id per request.
</Warning>

<Badge color="red" size="sm" shape="pill">POST</Badge>

```text
https://api.criteo.com/{version}/retail-media/account-management/accounts/{accountId}/brands/remove
```

**Sample Request**

<CodeGroup>
  ```bash cURL
  curl -L -X POST 'https://api.criteo.com/{version}/retail-media/account-management/accounts/568182612169883648/brands/remove' \
      -H 'Content-Type: application/json' \
      -H 'Accept: application/json' \
      -H 'Authorization: Bearer <ACCESS_TOKEN>' \
      -d '{
              "data": {
                  "type": "RemoveBrandfromDemandAccount",
                  "attributes": {
                      "brandIds": [
                          "2151768660"
                      ]
                  }
              }
          }'
  ```
</CodeGroup>

**Sample Response**

<CodeGroup>
  ```json JSON
  {
      "data": {
          "type": "RetailMediaBrands",
          "attributes": {
              "brandIds": [
                  2149947741
              ]
          }
      },
      "warnings": [],
      "errors": []
  }  
  ```
</CodeGroup>

## **Add Seller to Account**

The endpoint map or removes sellers from a private market seller account. Note that PUT calls overrides existing values. Only the `sellerId` mapped in the payload will be the ones associated with the account.

<Badge color="orange" size="sm" shape="pill">PUT</Badge>

```text
https://api.criteo.com/{version}/retail-media/account-management/accounts/{accountId}/sellers
```

**Sample Request**

<CodeGroup>
  ```bash cURL
  curl -L -X PUT 'https://api.criteo.com/{version}/retail-media/account-management/accounts/569185968379719680/sellers' \
  -H 'Content-Type: application/json' \
  -H 'Accept: application/json' \
  -H 'Authorization: Bearer <ACCESS_TOKEN>' \
  -d '{
  	"data": [
  		{
  			"type": "MapSellertoAccount",
  			"attributes": {
  				"sellerId": "5ed6ad7b0b2a9xxxxxxxxxxx",
  				"retailerId": "1141"
  			}
  		},
  		{
  			"type": "MapSellertoAccount",
  			"attributes": {
  				"sellerId": "640a20bbc63745xxxxxxxxxxx",
  				"retailerId": "1141"
  			}
  		}
  	]
  }'
  ```
</CodeGroup>

**Sample Response**

<CodeGroup>
  ```json JSON
  {
      "data": [
          {
              "type": "RetailMediaSeller",
              "attributes": {
                  "sellerId": "5ed6ad7b0b2a995f0427858e",
                  "retailerId": 1141
              }
          },
          {
              "type": "RetailMediaSeller",
              "attributes": {
                  "sellerId": "640a20bbc637455565a5c4a3",
                  "retailerId": 1141
              }
          }
      ],
      "warnings": [],
      "errors": []
  }
  ```
</CodeGroup>

## **Responses**

| Response | Description                                                                                                                |
| -------- | -------------------------------------------------------------------------------------------------------------------------- |
| 🔵`200`  | Call completed successfully                                                                                                |
| 🔵`201`  | Account created successfully                                                                                               |
| 🔴`400`  | Validation Error - one or more required fields was not found. Confirm that all required fields are present in the API call |

***

[Retailers](/retail-media/v2025.04/docs/retailers)

[Balances](/retail-media/v2025.04/docs/balances)
